# faslml-serve

./: .gitignore  Dockerfile  Makefile  Makefile.production  PRODUCTION-DEPLOYMENT.md  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  model.py  schemas.py
frontend/: Dockerfile  README.md  index.html  script.js  style.css
k8s/: deployment.yaml  frontend.yaml  grafana.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  prometheus.yaml
k8s/production/: grafana.yaml  prometheus.yaml  rbac.yaml
k8s/production/templates/: deployment.yaml  ingress.yaml
tests/: __init__.py  test_api.py
